--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400,600,700&display=swap"
     rel="stylesheet">
-  <title>The Nyblad Wedding</title>
+  <title>With love.</title>
 </head>
 
 <body>
